--- a/vt_ui_angular_openstack/public/css/project.css
+++ b/vt_ui_angular_openstack/public/css/project.css
@@ -1,3 +1,10 @@
 .bg-secondary {
     background-color: #2c3e50!important;
 }
+.console {
+    font-family:Courier;
+   color: #CCCCCC;
+    background: #000000 !important;
+    border: 3px double #CCCCCC;
+    padding: 10px;
+  }
