--- a/vt_ui_angular_openstack/views/index.ejs
+++ b/vt_ui_angular_openstack/views/index.ejs
@@ -111,6 +111,7 @@
           <h2 class="text-center text-uppercase text-secondary mb-0">Compute Services</h2>
           <hr class="star-dark mb-5">
           <div class="row">
+              <h3>Your Instances:</h3>
           <div class="col-md-12">
                 <!--Instance Grid-->
                 <div>
