--- a/vt_ui_angular_openstack/public/css/project.css
+++ b/vt_ui_angular_openstack/public/css/project.css
@@ -8,3 +8,39 @@
     border: 3px double #CCCCCC;
     padding: 10px;
   }
+
+
+
+  /*------------Login page----*/
+body, html {
+    height: 100%;
+  }
+  .bg { 
+    /* The image used */
+    background-image: url("../img/header1.jpg");
+  
+    /* Full height */
+    height: 100%; 
+  
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  
+  .centerscr { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  }
+  
+  .wrapper {
+    text-align: center;
+  }
+  .btn-lg.round {
+    border-radius: 24px;
+  }
+  
+  .btn-xl {
+    padding: 1rem 2rem; 
+  }
